c4prj2_input/grade.txt
Grading at Fri Jul 31 10:46:58 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:13:39: error: request for member ‘n_cards’ in something not a structure or union
       fc->decks[index].cards[fc->decks.n_cards++]=ptr;
                                       ^
future.c: In function ‘future_cards_from_deck’:
future.c:24:10: error: request for member ‘n_cards’ in something not a structure or union
   if(deck.n_cards!=fc->n_decks)
          ^
future.c:27:2: error: expected ‘;’ before ‘return’
  return;
  ^
future.c:33:37: error: request for member ‘cards’ in something not a structure or union
    fc->decks[i].cards[j]->value=deck.cards[i]->value;
                                     ^
future.c:34:36: error: request for member ‘cards’ in something not a structure or union
    fc->decks[i].cards[j]->suit=deck.cards[i]->suit;
                                    ^
Compilation of future.c failed

Overall Grade: F
